--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,10 @@ dependencies {
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.1-alpha"
+    implementation 'com.google.accompanist:accompanist-permissions:0.26.2-beta'
+
+    // Falcon
+    implementation 'com.jraska:falcon:2.2.0'
 
     // This one adds @Preview
     // remove when won't be needed
