--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.1-alpha"
     implementation 'com.google.accompanist:accompanist-permissions:0.26.2-beta'
 
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.2.1"
+
     // This one adds @Preview
     // remove when won't be needed
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
