--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     // Coil
     implementation "io.coil-kt:coil-compose:2.2.1"
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.1'
+
     // This one adds @Preview
     // remove when won't be needed
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
