--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String", "BUILD_TYPE", "null"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -21,7 +23,15 @@ android {
     }
 
     buildTypes {
+        debug {
+            defaultConfig.versionCode 1
+            defaultConfig.versionName "0.0"
+            buildConfigField "String", "BUILD_TYPE", "\"alpha\""
+        }
         release {
+            defaultConfig.versionCode 1
+            defaultConfig.versionName "0.0"
+            buildConfigField "String", "BUILD_TYPE", "null"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
