--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,13 +64,13 @@ android {
 
 dependencies {
 
-    def room_version = "2.5.0-alpha02"
-    def material_version = "1.0.0-alpha16"
+    def room_version = "2.5.0-beta01"
+    def material_version = "1.0.0-rc01"
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -89,7 +89,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Navigation Compose
-    implementation "androidx.navigation:navigation-compose:2.5.1"
+    implementation "androidx.navigation:navigation-compose:2.5.2"
 
     // Material Design 3
     implementation "androidx.compose.material3:material3:$material_version"
