--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 1
-        versionName "1.0"
-
-        buildConfigField "String", "BUILD_TYPE", "null"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -24,14 +22,9 @@ android {
 
     buildTypes {
         debug {
-            defaultConfig.versionCode 1
-            defaultConfig.versionName "0.0"
-            buildConfigField "String", "BUILD_TYPE", "\"alpha\""
+            defaultConfig.versionNameSuffix "-alpha"
         }
         release {
-            defaultConfig.versionCode 1
-            defaultConfig.versionName "0.0"
-            buildConfigField "String", "BUILD_TYPE", "null"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -89,7 +82,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Navigation Compose
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // Material Design 3
     implementation "androidx.compose.material3:material3:$material_version"
@@ -104,5 +97,5 @@ dependencies {
 
     // This one adds @Preview
     // remove when won't be needed
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0"
 }
