--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,11 +58,11 @@ android {
 dependencies {
 
     def room_version = "2.5.0-beta01"
-    def material_version = "1.0.0-rc01"
+    def material_version = "1.1.0-alpha01"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
