--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
         }
         externalNativeBuild {
             cmake {
+                cppFlags '-std=c++2a'
                 arguments "-DANDROID_STL=c++_shared"
             }
         }
