--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library( # Sets the name of the library.
 
         # Provides a relative path to your source file(s).
         native-lib.cpp
+        AudioFileManager.cpp
         SparvelAudioPlayer.cpp)
 
 find_package (oboe REQUIRED CONFIG)
