--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,6 @@ android {
         compose true
         prefab true
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion "1.2.0-alpha08"
-    }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -58,24 +55,24 @@ android {
 
 dependencies {
 
-    def room_version = "2.5.0-beta01"
-    def material_version = "1.1.0-alpha01"
+    def room_version = "2.5.0"
+    def material_version = "1.1.0-alpha07"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     // Dagger
-    implementation 'com.google.dagger:dagger:2.43.2'
-    kapt 'com.google.dagger:dagger-compiler:2.43.2'
-    implementation 'com.google.dagger:dagger-android:2.35.1'
-    implementation 'com.google.dagger:dagger-android-support:2.35.1'
-    kapt "com.google.dagger:dagger-android-processor:2.35.1"
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
+    implementation 'com.google.dagger:dagger-android:2.45'
+    implementation 'com.google.dagger:dagger-android-support:2.45'
+    kapt 'com.google.dagger:dagger-android-processor:2.45'
 
 
     // Room
@@ -90,16 +87,16 @@ dependencies {
     implementation "androidx.compose.material3:material3-window-size-class:$material_version"
 
     // Accompanist
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.1-alpha"
-    implementation 'com.google.accompanist:accompanist-permissions:0.26.2-beta'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.29.1-alpha'
+    implementation 'com.google.accompanist:accompanist-permissions:0.29.1-alpha'
 
     // Compose animation
     implementation "androidx.compose.animation:animation-graphics:$compose_version"
 
     // Coil
-    implementation "io.coil-kt:coil-compose:2.2.1"
+    implementation 'io.coil-kt:coil-compose:2.2.2'
 
     // This one adds @Preview
     // remove when won't be needed
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
 }
