--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     // Coil
     implementation 'io.coil-kt:coil-compose:2.2.2'
 
+    // Lottie animation
+    implementation 'com.airbnb.android:lottie-compose:6.0.0'
+
     // This one adds @Preview
     // remove when won't be needed
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
