--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,6 @@ android {
 
 dependencies {
 
-    def room_version = "2.5.0"
-    def material_version = "1.1.0-alpha07"
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
@@ -76,6 +73,7 @@ dependencies {
     // Material Design 3
     implementation "androidx.compose.material3:material3:$material_version"
     implementation "androidx.compose.material3:material3-window-size-class:$material_version"
+    implementation "androidx.compose.material:material:1.3.1"
 
     // Accompanist
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.29.1-alpha'
