--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
-        compose_version = '1.4.0-beta02'
+        compose_version = '1.5.0-alpha01'
+        room_version = "2.5.0"
+        material_version = "1.1.0-beta01"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
