--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,9 @@ plugins {
 }
 
 android {
+
     compileSdk 33
+    namespace 'com.sidukov.sparvel'
 
     defaultConfig {
         applicationId "com.sidukov.sparvel"
@@ -30,11 +32,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.5"
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -55,17 +60,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-
-    // Room
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
 
     // Navigation Compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
@@ -73,10 +74,10 @@ dependencies {
     // Material Design 3
     implementation "androidx.compose.material3:material3:$material_version"
     implementation "androidx.compose.material3:material3-window-size-class:$material_version"
-    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.material:material:1.4.1"
 
     // Accompanist
-    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.29.1-alpha'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.29.2-rc'
     implementation 'com.google.accompanist:accompanist-permissions:0.29.1-alpha'
 
     // Compose animation
@@ -90,5 +91,5 @@ dependencies {
 
     // This one adds @Preview
     // remove when won't be needed
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.4.1"
 }
