--- a/audiomanager/build.gradle
+++ b/audiomanager/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 33
     namespace 'som.sidukov.sparvel.audiomanager'
 
-    ndkVersion "25.1.8937393"
+    ndkVersion "25.2.9519653"
 
     defaultConfig {
         minSdk 26
@@ -47,11 +47,17 @@ android {
     buildFeatures {
         prefab true
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/cpp/ffmpeg/lib']
+        }
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
