--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,13 +62,12 @@ dependencies {
 
     implementation(project(path: ":audiomanager"))
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     // Navigation Compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
@@ -76,7 +75,7 @@ dependencies {
     // Material Design 3
     implementation "androidx.compose.material3:material3:$material_version"
     implementation "androidx.compose.material3:material3-window-size-class:$material_version"
-    implementation "androidx.compose.material:material:1.4.1"
+    implementation "androidx.compose.material:material:1.4.3"
 
     // Accompanist
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.29.2-rc'
@@ -85,13 +84,11 @@ dependencies {
     // Compose animation
     implementation "androidx.compose.animation:animation-graphics:$compose_version"
 
-    // Coil
-    implementation 'io.coil-kt:coil-compose:2.2.2'
-
+    // remove it and replace with a simple animatedVectorDrawable, no need overhead with libs
     // Lottie animation
     implementation 'com.airbnb.android:lottie-compose:6.0.0'
 
     // This one adds @Preview
     // remove when won't be needed
-    debugImplementation "androidx.compose.ui:ui-tooling:1.4.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
 }
